# mozzarellm

./: .env.example  .gitignore  .gitmodules  README.md  aconcagua_1.sh  cluster_config.json  config.json  config_anthropic.json  config_deepseek.json  config_gemini.json  config_gene.json  config_openai.json  config_sonar.json  constant.py  denali_1.sh  environment.yml  main.ipynb  main.py  pyproject.toml  requirements.txt  reshape_clusters.py  setup.py  test_models.sh
data/: sample_gene_sets.csv
data/benchmarks/: U2OS Cell Map Assemblies.xlsx
data/knowledge/: knowledge_base_info.md  m6a_rna_modification.md  mitochondrial_homeostasis.md  mtor_signaling.md  myc_transcription.md  proteasome_pathway.md  ribosome_biogenesis.md
docs/: REFACTORING_SUMMARY.md  ROADMAP.md
examples/: README.md  benchmark_utils.py  benchmarks.ipynb  example_notebook.ipynb  run_all_benchmarks.py  run_benchmark.py  sample_data.csv
examples/depmap/: run_benchmark.py  screen_context.json  wainberg_2021.csv  wainberg_2021_genes.csv
examples/example_scripts/: aconcagua_1.sh  luke_1.sh
examples/ops/: funk_2022.csv  funk_2022_genes.csv  run_benchmark.py  screen_context.json
examples/proteomics/: run_benchmark.py  schaffer_2025.csv  schaffer_2025_genes.csv  screen_context.json
examples/rag/: improved_rag_demo.ipynb  rag_test.ipynb  run_benchmark.py  run_rag_comparison.py
interface/: control_panel.ipynb  ouput_filepath_heirarchy_info.txt  screen_context_example.json  screen_context_template.json
mozzarellm/: __init__.py  analyzer.py  configs.py  main.py  models.py  prompt_components.py  prompts.py  providers.py
mozzarellm/clients/: LLM_api_clients.py  __init__.py  llm_api_clients.py  uniprot_api_client.py
mozzarellm/configs/: config_anthropic.json  config_gemini.json  config_openai.json
mozzarellm/pipeline/: __init__.py  analyzer.py  bundle_builder.py  literature_mcp.py
mozzarellm/prompts/: HeLa_interphase_screen_info.txt
mozzarellm/schemas/: analysis_output_schemas.py  bundle_schemas.py  mcp_schemas.py
mozzarellm/utils/: __init__.py  bundle_schemas.py  cluster_analyzer.py  cluster_utils.py  config_utils.py  io.py  llm_analysis_utils.py  logging_utils.py  pricing.py  prompt_factory.py  retrieval.py  screen_context_utils.py  trace.py
prompts/: HeLa_interphase_screen_info.txt  custom_prompts.txt  top_targets.txt
tests/: test_analyzer.py  test_api_calls.py  test_bundle_builder.py  test_cluster_utils.py  test_literature_validator.py  test_load_cluster_table.py  test_models.py  test_prompt_components.py  test_prompt_factory.py  test_providers.py  test_retrieval.py  test_screen_context_loading.py  test_uniprot_api_client.py
tests/phase1_prompt_benchmarking/: phase1_benchmark_preprocess.py
tests/phase1_prompt_benchmarking/benchmark_evidence_bundles/: aconcagua_interphase__cluster_109__bundle.json  aconcagua_interphase__cluster_29__bundle.json  aconcagua_interphase__cluster_36__bundle.json  aconcagua_interphase__cluster_41__bundle.json  aconcagua_interphase__cluster_58__bundle.json  aconcagua_interphase__cluster_68__bundle.json  aconcagua_interphase__cluster_79__bundle.json  aconcagua_interphase__cluster_94__bundle.json  denali__cluster_21__bundle.json  denali__cluster_77__bundle.json  jebel__cluster_14__bundle.json  whitney__cluster_137__bundle.json  whitney__cluster_6__bundle.json  whitney__cluster_8__bundle.json
tests/phase1_prompt_benchmarking/benchmark_evidence_bundles/aconcagua_interphase_analysis/intermediates/: assigned_accession_cluster_df.csv  cluster_109_chunk_annotated.csv  cluster_29_chunk_annotated.csv  cluster_36_chunk_annotated.csv  cluster_41_chunk_annotated.csv  cluster_58_chunk_annotated.csv  cluster_68_chunk_annotated.csv  cluster_79_chunk_annotated.csv  cluster_94_chunk_annotated.csv
tests/phase1_prompt_benchmarking/benchmark_evidence_bundles/denali_analysis/intermediates/: assigned_accession_cluster_df.csv  cluster_21_chunk_annotated.csv  cluster_77_chunk_annotated.csv
tests/phase1_prompt_benchmarking/benchmark_evidence_bundles/jebel_analysis/intermediates/: assigned_accession_cluster_df.csv  cluster_14_chunk_annotated.csv
tests/phase1_prompt_benchmarking/benchmark_evidence_bundles/whitney_analysis/intermediates/: assigned_accession_cluster_df.csv  (+1 more)
tests/phase1_prompt_benchmarking/benchmark_inputs/: aconcagua_interphase_screen_context.json  benchmark_clusters.csv  denali_screen_context.json  jebel_screen_context.json  whitney_screen_context.json
tools/: sqlite_cache.py
utils/: anthropic_query.py  cluster_analyzer.py  cluster_utils.py  gemini_query.py  llm_analysis_utils.py  logging_utils.py  openai_query.py  perplexity_query.py  prompt_factory.py  server_model_query.py
