[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mozzarellm"
version = "0.2.0"
authors = [
    {name = "Matteo Di Bernardo", email = "mdiberna@whitehead.mit.edu"},
]
description = "LLM-powered analysis of functional genomics screens for gene function discovery"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "openpyxl",
    "python-dotenv",
    "requests",
    "ipykernel",
    "openai>=1.70.0",
    "google-genai>=1.50.0",
    "anthropic>=0.49.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/cheeseman-lab/mozzarellm"
"Bug Tracker" = "https://github.com/cheeseman-lab/mozzarellm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mozzarellm*"]

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Set line length
line-length = 100

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
lint.ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["mozzarellm"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# NOTE: to run use: pytest --cov=mozzarellm --cov-report=html and check htmlcov/index.html
